test_suite/tests/ui/duplicate-attribute/rename-ser-ser.stderr
error: duplicate serde attribute `rename`
 --> tests/ui/duplicate-attribute/rename-ser-ser.rs:5:37
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct S {
5 |     #[serde(rename(serialize = "x", serialize = "y"))]
  |                                     ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
